# Openlist-Ani

./: .dockerignore  .gitignore  README.md  config.toml.example  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/agents/: code-quality-fixer.agent.md
.github/instructions/: oAni-code-style-guide.instructions.md
.github/workflows/: ci.yml  publish.yaml  wiki-sync.yaml
docker/: Dockerfile  entrypoint.sh
docs/: Docker部署指南.md  Home.md  PIP安装指南.md  快速开始.md  源码编译指南.md  配置说明.md
skills/anime-download/: SKILL.md
skills/anime-search/: SKILL.md
skills/bangumi/: SKILL.md
skills/mikan/: SKILL.md
skills/oani/: SKILL.md
src/openlist_ani/: __init__.py  assistant_main.py  config.py  database.py  logger.py  worker.py
tests/: conftest.py  test_cache.py  test_config.py  test_database.py  test_logger.py  test_validate_openlist.py  test_worker.py
tests/_meta/: test_architecture_boundaries.py  test_layering.py
tests/assistant/: __init__.py  conftest.py  test_assistant_frontend_config.py  test_assistant_main.py  test_auto_dream.py  test_autocompact.py  test_bangumi_latest_episode_skill.py  test_bug_fixes.py  test_builtin_tools.py  test_cancellation.py  test_cli_frontend.py  test_context.py  test_context_collapse.py  test_e2e_integration.py  test_file_security.py  test_grep_tool.py  test_loop.py  test_loop_features.py  test_memory.py  test_memory_dir.py  test_memory_tool.py  test_messaging_frontend.py  test_mid_turn_injection.py  test_models.py  test_oani_parse_rss_skill.py  test_orchestrator.py  test_partial_compact.py  test_provider.py  (+13 more)
(+434 files in other folders)
